manifests/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: tripapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryedx5658.azurecr.io/tripinsights/user-java:1.0
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 80
          name: user-java
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: tripapi
spec:
  ports:
  - port: 80
  selector:
    app: user-java
