manifests/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: tripapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryedx5658.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: userprofile
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: tripapi
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
